--- a/.github/workflows/cmangos-classic-ubuntu-build.yml
+++ b/.github/workflows/cmangos-classic-ubuntu-build.yml
@@ -19,7 +19,7 @@ env:
   CORE_REPO_OWNER: ${{github.repository_owner}}
   REPO_DIR : ${{github.workspace}}
   BUILD_DIR: ${{github.workspace}}/bin/builddir
-  BOOST_PLATFORM_VERSION: "20.04"
+  BOOST_PLATFORM_VERSION: "22.04"
   BOOST_VERSION: "1.86.0"
   BOOST_INSTALL_DIR: "${{github.workspace}}/bin"
 
@@ -32,17 +32,17 @@ jobs:
     strategy:
       matrix:
        include:
-          - os: ubuntu-20.04
+          - os: ubuntu-22.04
             COMPILER_CC: gcc
             COMPILER_PP: g++
             USE_PCH: ON
-            EXTRA_BUILD: "-DBUILD_EXTRACTORS=ON -DBUILD_PLAYERBOTS=ON -DBUILD_AHBOT=ON -DBUILD_GIT_ID=ON -DBUILD_MODULES=ON -DBUILD_MODULE_ACHIEVEMENTS=ON -DBUILD_MODULE_DUALSPEC=ON -DBUILD_MODULE_HARDCORE=ON -DBUILD_MODULE_IMMERSIVE=ON -DBUILD_MODULE_TRANSMOG=ON -DBUILD_MODULE_BARBER=ON"
+            EXTRA_BUILD: "-DBUILD_EXTRACTORS=ON -DBUILD_PLAYERBOTS=ON -DBUILD_AHBOT=ON -DBUILD_GIT_ID=ON -DBUILD_MODULES=ON -DBUILD_MODULE_ACHIEVEMENTS=ON -DBUILD_MODULE_DUALSPEC=ON -DBUILD_MODULE_HARDCORE=ON -DBUILD_MODULE_IMMERSIVE=ON -DBUILD_MODULE_TRANSMOG=ON -DBUILD_MODULE_BOOST=ON  -DBUILD_MODULE_BARBER=ON -DBUILD_MODULE_TRAININGDUMMIES=ON"
 
-          - os: ubuntu-20.04
+          - os: ubuntu-22.04
             COMPILER_CC: clang
             COMPILER_PP: clang++
             USE_PCH: ON
-            EXTRA_BUILD: "-DBUILD_EXTRACTORS=ON -DBUILD_PLAYERBOTS=ON -DBUILD_AHBOT=ON -DBUILD_GIT_ID=ON -DBUILD_MODULES=ON -DBUILD_MODULE_ACHIEVEMENTS=ON -DBUILD_MODULE_DUALSPEC=ON -DBUILD_MODULE_HARDCORE=ON -DBUILD_MODULE_IMMERSIVE=ON -DBUILD_MODULE_TRANSMOG=ON -DBUILD_MODULE_BARBER=ON"
+            EXTRA_BUILD: "-DBUILD_EXTRACTORS=ON -DBUILD_PLAYERBOTS=ON -DBUILD_AHBOT=ON -DBUILD_GIT_ID=ON -DBUILD_MODULES=ON -DBUILD_MODULE_ACHIEVEMENTS=ON -DBUILD_MODULE_DUALSPEC=ON -DBUILD_MODULE_HARDCORE=ON -DBUILD_MODULE_IMMERSIVE=ON -DBUILD_MODULE_TRANSMOG=ON -DBUILD_MODULE_BOOST=ON  -DBUILD_MODULE_BARBER=ON -DBUILD_MODULE_TRAININGDUMMIES=ON"
 
           #- os: ubuntu-20.04
           #  COMPILER_CC: clang
@@ -105,7 +105,7 @@ jobs:
         
   notify-success:
     name: Discord release successfully notification
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     permissions:
       contents: none
     needs:
@@ -128,7 +128,7 @@ jobs:
 
   notify:
     name: Discord Notification
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     permissions:
       contents: none
     needs: # make sure the notification is sent AFTER the jobs you want included have completed
