--- a/.github/workflows/cmangos-classic-ubuntu-build.yml
+++ b/.github/workflows/cmangos-classic-ubuntu-build.yml
@@ -33,8 +33,8 @@ jobs:
       matrix:
        include:
           - os: ubuntu-22.04
-            COMPILER_CC: gcc
-            COMPILER_PP: g++
+            COMPILER_CC: gcc-12
+            COMPILER_PP: g++-12
             USE_PCH: ON
             EXTRA_BUILD: "-DBUILD_PLAYERBOTS=ON -DBUILD_AHBOT=ON -DBUILD_GIT_ID=ON -DBUILD_MODULES=ON -DBUILD_MODULE_ACHIEVEMENTS=ON -DBUILD_MODULE_DUALSPEC=ON -DBUILD_MODULE_HARDCORE=ON -DBUILD_MODULE_IMMERSIVE=ON -DBUILD_MODULE_TRANSMOG=ON -DBUILD_MODULE_BOOST=ON  -DBUILD_MODULE_BARBER=ON -DBUILD_MODULE_TRAININGDUMMIES=ON"
 
