--- a/.github/workflows/cmangos-classic-windows-release.yml
+++ b/.github/workflows/cmangos-classic-windows-release.yml
@@ -18,6 +18,7 @@ env:
   CORE_REPO_OWNER: ${{github.repository_owner}}
   BUILD_TYPE: RelWithDebInfo
   BUILD_OPTIONS: "-DBUILD_EXTRACTORS=ON -DBUILD_PLAYERBOTS=ON -DBUILD_AHBOT=ON -DBUILD_GIT_ID=ON -DBUILD_MODULES=ON -DBUILD_MODULE_ACHIEVEMENTS=ON -DBUILD_MODULE_DUALSPEC=ON -DBUILD_MODULE_HARDCORE=ON -DBUILD_MODULE_IMMERSIVE=ON -DBUILD_MODULE_TRANSMOG=ON -DBUILD_MODULE_BOOST=ON -DBUILD_MODULE_BARBER=ON -DBUILD_MODULE_TRAININGDUMMIES=ON -DBUILD_MODULE_BALANCING=ON"
+  REPO_DIR : ${{github.workspace}}
   BUILD_DIR: ${{github.workspace}}/bin/builddir
   BOOST_TOOLSET: "msvc"
   BOOST_VERSION: "1.86.0"
